@@ -146,5 +146,6 @@
 ## 3.8
 #import mVersionControl
 #import mShell
+#import mConfig
 
 import Import
